fix cut off text on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -209,6 +209,7 @@ label:focus,
   padding: 0 !important;
   border: none !important;
   background-color: rgba(0, 0, 0, 0) !important;
+  z-index: 999;
 }
 
 .up {
